--- a/index.css
+++ b/index.css
@@ -29,9 +29,17 @@ img {
 blockquote {
   border-left: 2px solid #ddd;
   margin-left: 0;
+  margin-right: 0;
   padding-left: 10px;
   color: #aaa;
   font-style: italic;
+}
+
+blockquote[dir="rtl"] {
+  border-left: none;
+  padding-left: 0;
+  padding-right: 10px;
+  border-right: 2px solid #ddd;
 }
 
 table {
