--- a/index.css
+++ b/index.css
@@ -21,6 +21,11 @@ pre {
   white-space: pre-wrap;
 }
 
+:not(pre) > code {
+  background-color: #eee;
+  padding: 3px;
+}
+
 img {
   max-width: 100%;
   max-height: 20em;
