--- a/index.css
+++ b/index.css
@@ -208,7 +208,20 @@ input:focus {
   margin-top: 0;
 }
 
-.check-list-item [contenteditable="false"] {
-  display: inline-block;
+.check-list-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.check-list-item > span:first-child {
   margin-right: 0.75em;
+}
+
+.check-list-item > span:last-child {
+  flex: 1;
+}
+
+.check-list-item > span:last-child:focus {
+  outline: none;
 }
