--- a/index.css
+++ b/index.css
@@ -145,11 +145,25 @@ input:focus {
  * Example.
  */
 
-.example {
+.example, .error {
   max-width: 42em;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   padding: 20px;
+}
+
+.example {
   background: #fff;
+}
+
+.error {
+  background: #fffae0;
+}
+
+.error .info {
+  background: #fbf1bd;
+  white-space: pre;
+  overflow-x: scroll;
+  margin-bottom: 0;
 }
 
 .editor > * > * + * {
